--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -6,6 +6,7 @@
 .wrapper {
     display: flex;
     flex-direction: column;
+    align-items: center;
     min-height: 100%;
     width: 1000px;
     background: #FFFFFF;
@@ -85,6 +86,8 @@
     transition: 0.2s;
 }
 
-.wrapper ~ .btn {
-    width: 100px;
+.showMore {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    width: 150px;
 }
