--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -3,16 +3,19 @@
     min-height: 100%;
 }
 
-.wrapper {
+.wrapper,
+.preloaderWrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     min-height: 100%;
     width: 1000px;
     background: #FFFFFF;
     box-sizing: border-box;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.135216);
     border-radius: 8px;
+    padding-bottom: 25px;
 }
 
 .userCardWrapper {
