--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -3,8 +3,7 @@
     min-height: 100%;
 }
 
-.wrapper,
-.preloaderWrapper {
+.wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
