--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -32,3 +32,10 @@
     font-weight: 600;
     font-size: 25px;
 }
+
+.login {
+    margin-left: auto;
+    margin-right: 40px;
+    font-weight: bold;
+    font-size: 16px;
+}
