feat: add api.ts for work with server

--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -88,6 +88,10 @@
     transition: 0.2s;
 }
 
+.btn:disabled {
+    background: rgba(126, 114, 242, 0.4);
+}
+
 .showMore {
     margin-top: 30px;
     margin-bottom: 30px;
